--- a/templates/main.html
+++ b/templates/main.html
@@ -92,7 +92,7 @@
 <h2>Number is {{data.number}}. </h1>
 <h3>Op is {{ data.op }}.</h1>
 {% else %}
-<h1> Welcome To...</h1>
+<h1> Welcome To...{{ user.name }}</h1>
 
 {% endif %}
 <div class="main">
