--- a/templates/main.html
+++ b/templates/main.html
@@ -87,24 +87,17 @@
     }
 </style>
 <body>
-{% if data %}
-<h1>This is {{data.ab}}. </h1>
-<h2>Number is {{data.number}}. </h1>
-<h3>Op is {{ data.op }}.</h1>
-{% else %}
-<h1> Welcome To...{{ user.name }}</h1>
 
-{% endif %}
 <div class="main">
     <div class="control">
     <div class="realtime">
         <div class="realtime-info">
-            <span v-text="'当前状态: '+realtime.sun"></span>
-            <span v-text="'当前天气: '+weather[realtime.skycon]"></span>
-            <span v-text="'实时温度: '+realtime.temperature+'℃'"></span>
-            <span v-text="'实时湿度: '+realtime.humidity"></span>
-            <span v-text="'实时云量: '+realtime.cloudrate*100+'%'"></span>
-            <span v-text="'污染指数: '+realtime.pm25"></span>
+		<span>室内温度：{{ data.temperature_1 }}℃</span>
+		<span>室内湿度：{{ data.humidity_1 }}%</span>
+		<span>室内光强：{{ data.intensity_1 }}</span>
+                <span>室外温度：</span>
+                <span>室外湿度：</span>
+                <span>室外光强：</span>
             <span v-text="'实时降水: '+realtime.intensity+'mm'"></span>
             <span v-text="'实时风力: '+realtime.wind.speed+'m/s'"></span>
         </div>
@@ -112,11 +105,10 @@
         </div>
     </div>
 </div>
-<a href="http://cl.xcf.io/api-help">如果你想用 API 控制</a>
-<!
+<!--
 <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="http://apps.bdimg.com/libs/vue/1.0.8/vue.min.js"></script>
- !>
+--!>
 <script type="text/javascript" src="{{ url_for('static', filename='js/main.js') }}"></script>
 </body>
 </html>
